tests/samples/valid/mutable_pointer.pn
fn foo(x: &&u8, y: &u8)
{
	&x = &y;
}

fn main() -> u8
{
	var a: u8 = 17;
	var b: u8 = 200;
	var x: &u8 = &a;
	var y: &u8 = &b;
	foo(&&x, &y);
	return: x
}
