tests/samples/invalid/pointer_to_temporary_pointer.pn
fn main()
{
	var a: u8 = 10;
	var x: &&u8 = &&a;

	var b: &u8 = &a;
	var c: &&u8 = &&b;
	var d: &&&u8 = &&&c;
	var y: &&&&&u8 = &&&&&d;
}
